--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- Use the actual built file generated in dist -->
+    <script type="module" src="/assets/index-[hash].js"></script>
   </body>
 </html>
