--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
   <body>
     <div id="root"></div>
     <!-- Use the actual built file generated in dist -->
-    <script type="module" src="/assets/index-[hash].js"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
